# Group-Kahoot

./: .gitignore  README.md  client.html  docker-compose.yml  index.html  kahoot_server.cpp  test.db  wsEvents.md
client/: Dockerfile  README.md  TODO.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  App.vue  index.css  main.ts
client/src/components/: Game.vue  GamePage.vue  Host.vue  Login.vue  Question.vue  QuestionEdit.vue  QuestionList.vue  QuestionSetEdit.vue  QuestionSetList.vue  Signup.vue
client/src/game/: Host.ts  Player.ts
client/src/services/: ApiCall.ts  WebSocket.ts
client/src/store/: userStore.ts
client/src/types/: types.ts  vue.d.ts
client2/: index.html  package-lock.json  package.json  vite.config.ts
client2/my-vue-app/: package-lock.json  package.json
client2/src/: App.vue  style.css
client2/src/components/: Game.vue  Lobby.vue  MainMenu.vue  (+1 more)
database/: .env  Dockerfile  README.md  api_error_code.py  main_rest_api.py  model.py  models.py  question_router.py  requirements.txt  test.db
database/auth/: auth_handler.py  auth_router.py  auth_schemas.py  user_api.py  user_router.py
database/mcp_server/: Dockerfile  llm_router.py  llm_service.py  mcp_client.py  mcp_client_example.py  mcp_server.py  requirements.txt
database/question/: ques_rest_handler.py  ques_rest_router.py  question_api.py
server/: CMakeLists.txt  Dockerfile  config.py  kahoot_client.py  kahoot_server.py  logic.py  models.py  requirements.txt  state.py  utils.py  wrapper.py
server/auth/ssl_cert/: cert.pem  key.pem
(+20 files in other folders)
